Add customer basket

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -48,6 +48,10 @@ body {
                     color: #bfb;
                     font-size: small;
                 }
+                #time {
+                  padding-top: 10px;
+                  color:  #bfb;
+                }
             }
         }
     }
