--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 
     <body class="<%= controller.controller_name %>">
         <div id="banner">
-            <%= image_tag("logo.png") %>
+            <%= link_to(image_tag("logo.png"), @root_path) %>
             <%= @page_title || "Pragmatic Bookshelf" %>
         </div>
         <div id="columns">
@@ -28,6 +28,7 @@
                     <li>
                         <a href="http://www..../contact">Contact</a>
                     </li>
+                    <li><div id="time"><%= Time.now.to_formatted_s(:short) %></div></li>
                 </ul>
             </div>
             <div id="main">
