--- a/app/assets/stylesheets/store.scss
+++ b/app/assets/stylesheets/store.scss
@@ -41,5 +41,9 @@
             font-weight: bold;
             margin-right: 3em;
         }
+
+        form, div {
+          display: inline;
+        }
     }
 }
