--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 
     <body class="<%= controller.controller_name %>">
         <div id="banner">
-            <%= link_to(image_tag("logo.png"), @root_path) %>
+            <%= link_to(image_tag("logo.png"), root_path) %>
             <%= @page_title || "Pragmatic Bookshelf" %>
         </div>
         <div id="columns">
