--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,12 @@
         </div>
         <div id="columns">
             <div id="side">
+              <% if @cart %>
+                <%= hidden_div_if(@cart.line_items.empty?, id: 'cart') do %>
+                  <%= render @cart %>
+                <% end %>
+              <% end %>
+
                 <ul>
                     <li>
                         <a href="http://www....">Home</a>
@@ -28,7 +34,9 @@
                     <li>
                         <a href="http://www..../contact">Contact</a>
                     </li>
-                    <li><div id="time"><%= Time.now.to_formatted_s(:short) %></div></li>
+                    <li>
+                        <div id="time"><%= Time.now.to_formatted_s(:short) %></div>
+                    </li>
                 </ul>
             </div>
             <div id="main">
