--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -7,6 +7,43 @@ body {
     margin: 0;
 }
 
+.depot_form {
+    fieldset {
+        background: #efe;
+
+        legend {
+            color: #dfd;
+            background: #141;
+            font-family: sans-serif;
+            padding: 0.2em 1em;
+        }
+    }
+
+    form {
+        label {
+            width: 5em;
+            float: left;
+            text-align: right;
+            padding-top: 0.2em;
+            margin-right: 0.1em;
+            display: block;
+        }
+
+        input,
+        select,
+        textarea {
+            margin-left: 0.5em;
+        }
+
+        .submit {
+            margin-left: 4em;
+        }
+
+        br {
+            display: none;
+        }
+    }
+}
 
 #banner {
     background: #9c9;
