Add spanish language

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,15 @@
 
     <body class="<%= controller.controller_name %>">
         <div id="banner">
+            <%= form_tag root_path, :method => "get", class: 'locale' do %>
+                <%= select_tag 'set_locale',
+                    options_for_select(LANGUAGES, I18n.locale.to_s),
+                    onchange: 'this.form.submit()' %>
+                <%= submit_tag 'submit' %>
+                <%= javascript_tag "$('.locale input').hide()" %>
+            <% end %>
             <%= link_to(image_tag("logo.png"), root_path) %>
-            <%= @page_title || "Pragmatic Bookshelf" %>
+            <%= @page_title || t('.title') %>
         </div>
         <div id="columns">
             <div id="side">
@@ -22,21 +29,10 @@
               <% end %>
 
                 <ul>
-                    <li>
-                        <a href="http://www....">Home</a>
-                    </li>
-                    <li>
-                        <a href="http://www..../faq">Questions</a>
-                    </li>
-                    <li>
-                        <a href="http://www..../news">News</a>
-                    </li>
-                    <li>
-                        <a href="http://www..../contact">Contact</a>
-                    </li>
-                    <li>
-                        <div id="time"><%= Time.now.to_formatted_s(:short) %></div>
-                    </li>
+                  <li><a href="#"><%= t('.home') %></a></li>
+                  <li><a href="#"><%= t('.questions') %></a></li>
+                  <li><a href="#"><%= t('.news') %></a></li>
+                  <li><a href="#"><%= t('.contact') %></a></li>
                 </ul>
 
                 <% if session[:user_id] %>
