--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -7,6 +7,10 @@ body {
     margin: 0;
 }
 
+.locale {
+    float: right;
+    margin: -0.25em 0.1em;
+}
 .depot_form {
     fieldset {
         background: #efe;
