--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -1,5 +1,5 @@
 <% unless cart.line_items.empty? %>
-<h2>Your Cart</h2>
+<h2><%= t('.title') %></h2>
 <table>
     <%= render(cart.line_items) %>
     <tr class="total_line">
@@ -7,7 +7,7 @@
         <td class="total_cell"><%= number_to_currency(cart.total_price) %></td>
     </tr>
 </table>
-<%= button_to "Checkout", new_order_path, method: :get %>
-<%= button_to 'Empty cart', cart, method: :delete,
+<%= button_to t('.checkout'), new_order_path, method: :get %>
+<%= button_to t('.empty'), cart, method: :delete,
               data: { confirm: 'Are you sure?' } %>
 <% end %>
