--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -2,20 +2,21 @@
 <p id="notice"><%= notice %></p>
 <% end %>
 
-<h1>Your Pragmatic Catalog</h1>
-<% cache ['store', Product.latest] do %>
+<h1><%= t('.title_html') %></h1>
+<!--Commented out caching becouse i18n isn't working properly  -->
+<% #cache ['store', Product.latest] do %>
   <% @products.each do |product| %>
-  <% cache ['entry', product] do %>
+  <% #cache ['entry', product] do %>
   <div class="entry">
     <%= image_tag(product.image_url) %>
     <h3><%= product.title %></h3>
     <%= sanitize(product.description) %>
     <div class="price_line">
       <span class="price"><%= number_to_currency(product.price) %></span>
-      <%= button_to 'Add to Cart', line_items_path(product_id: product),
+      <%= button_to t('.add_html'), line_items_path(product_id: product),
           remote: true %>
     </div>
   </div>
-  <% end %>
-  <% end %>
+  <% #end %>
+  <% #end %>
 <% end %>
